[gd_scene load_steps=3 format=3 uid="uid://caw2bjf51x0aq"]

[ext_resource type="Script" uid="uid://iu16lwio3ypu" path="res://Scenes/Objects/nail_scenes.gd" id="1_3wqu0"]
[ext_resource type="SpriteFrames" uid="uid://uh548ql5j2xv" path="res://Textures/Spritesheets/nail_scenes.tres" id="2_3wqu0"]

[node name="NailScenes" type="Node2D"]
script = ExtResource("1_3wqu0")

[node name="Boards" type="Node2D" parent="."]

[node name="Board1" type="AnimatedSprite2D" parent="Boards"]
texture_filter = 1
position = Vector2(908, 258)
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_3wqu0")
animation = &"Won"

[node name="Board2" type="AnimatedSprite2D" parent="Boards"]
texture_filter = 1
position = Vector2(482, 463)
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_3wqu0")
animation = &"Won"

[node name="Board3" type="AnimatedSprite2D" parent="Boards"]
texture_filter = 1
position = Vector2(910, 693)
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_3wqu0")
animation = &"Won"

[node name="Board4" type="AnimatedSprite2D" parent="Boards"]
texture_filter = 1
position = Vector2(1350, 487)
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_3wqu0")
animation = &"Nail"
